[package]
name = "apparmor-psp"
version = "1.0.3"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.25.0", default_features = false, features = [
  "v1_32",
] }
kubewarden-policy-sdk = { version = "0.14.0", default_features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
